# Programming

./: .gitmodules  README.md  lb9.txt  mergesort.py  sort.c
debugger/: README.md  task1.c  task2.c  task3.c  task4.c  task_5.c  task_star.c
lab_10/: Makefile  README.md  lab_10.c  lb10.c  lb10.h  lb_10_func.c  lb_10_main.c
lab_11/: 1.c  3.c  README.md
lab_12/: 5*.c  README.md  book.h  book_func.c  main.c
lab_13/: README.md
lab_13/project/: CMakeLists.txt  Makefile
lab_13/project/include/: book.h
lab_14/: README.md  main.c  task_4.c  task_5.c
lab_15/: README.md  for_3.c  for_4.c  for_5.c  t_*.c
lab_15/files/: staff.csv
lab_16/: plot.py  task3.c  task4_1.c  task4_2.c  threads.md
lab_17/: CMakeLists.txt  README.md  strong_number.c  strong_number.h  test_strong_number.c
lab_4/: README.md  lab4_6.c  lab4_7.c
lab_5/: README.md  lab5.c  lab5_7.c
lab_6/: README.md  cramer.c  matrix.c
lab_7/: README.md  lab7_4.c
lab_8/: README.md  lab8_6.c
lab_9/: README.md  file1.txt
programming/: sort.c
screenshots/: README.md  lb9.md
winter_school/d1/: 00_hello.go  01_wolfram.go  02_life.go
winter_school/d2/: go.mod  main.go
winter_school/d2/algo/: serch.go
winter_school/d2/entities/: types.go
winter_school/d2/world/: loader.go  maze_01.txt  maze_02.txt
winter_school/d3/: level_3.py
winter_school/d3/level_1/: t1.py  t2.py  t3.py
winter_school/os/d1/: add.c  t2.c
winter_school/os/d2/: out.txt  serv.c  t1.c  t2.c  text.txt
winter_school/os/d3/: r_zip_r.txt
